--- a/index.html
+++ b/index.html
@@ -3,50 +3,63 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Basic Portfolio</title>
-    <link rel="stylesheet" type="text/css" href="css/reset.css" />
+    <title>Bootstrap Portfolio</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/style.css"/>
 </head>
 <body class="container">
     <div class="row">
-        <div class="col-md-12 col-sm-12 col-xs-12">
-        <nav class="navbar sticky-top navbar-dark bg-primary navbar-toggler-left border border-dark">
-            <div>Colton Johnson</div>
-            <div class="row">
-                <div class="col-xs-4.5"></div>
-                <div class="col-xs-4.5"></div>
-                <div class="col-xs-3">
-                <a class="navbar-brand float-sm-left" href="index.html">About</a>
-                <a class="navbar-brand float-sm-left" href="portfolio.html">Portfolio</a>
-                <a class="navbar-brand float-sm-left" href="contact.html">Contact</a>
+        <div class="ol-xs-2">
+        <div class="col-xs-10">
+            <nav class="navbar justify-content-between fixed-top navbar-dark bg-white navbar-toggler-left border border-dark text-muted">
+                <div class="h3 p-3 mb-2 bg-info text-white">Colton Johnson</div>
+                <div class="row">
+                    <div class="col-xs-4.5"></div>
+                    <div class="col-xs-4.5"></div>
+                    <div class="col-xs-3">
+                        <a class="navbar-brand float-sm-left text-muted" href="index.html">About</a>
+                        <a class="navbar-brand float-sm-left text-muted" href="portfolio.html">Portfolio</a>
+                        <a class="navbar-brand float-sm-left text-muted" href="contact.html">Contact</a>
+                    </div>
                 </div>
-            </div>
-        </nav>
+            </nav>
         </div>
     </div>
     <br>
-    <div class="jumbotron">
+    <br>
+    <br>
+    <br>
+    <div class="jumbotron border border-dark bg-white">
         <div class="row">
             <div class="col-xs-4 col-sm-4 col-md-4">
-                <h1 class="display-3">About</h1>
-                <p class="lead"><img class="img-thumbnail" src="images/selfie1.jpeg" alt="Colton Johnson"></p>
+                <div class="h1 text-info" >About</div>
+            </div>
+            <div class="col-xs-4 col-sm-4 col-md-4"></div>
+            <div class="col-xs-4 col-sm-4 col-md-4"></div>
+        <br>
+        <div class="row">
+            <div class="col-xs-4 col-sm-4 col-md-4">
+                <p class="lead"><img class="img-thumbnail img-fluid float-sm-left" src="images/selfie1.jpeg" alt="Colton Johnson"></p>
             </div>
                 <hr class="my-2">
                 <div class="col-xs-8 col-sm-8 col-md-8">
-                <p> Hey there! My name is Colton Johnson and I am a Chapel Hill local. After moving as a youth to North Carolina from Peteluma California I have lived here ever since. I am fortunate to have been blessed with wonderful friends and family in the area. 
+                    <p>Hey there! My name is Colton Johnson and I am a Chapel Hill local. After moving as a youth to North Carolina from Peteluma California I have lived here ever since. I am fortunate to have been blessed with wonderful friends and family in the area. 
                     </p>
                     <br>
                     <p>I spent my late teen years in Boone North Carolina, and after attending classes at the local community college I returned to the Chapel Hill area to finish an Associates in Science. At Allamance Community College I focused on chemistry and mathematics.
                     </p>  
                     <br>  
-                    <p>  During the finishing months of my humble degree I was hired on by Holmes Oil Company, where I served for several years as a marketing analyst and pricebbok coordinator. Realizing the convenience store industry was not a good fit for me I decided to pursue a (surprisingly) more lucrative career in the food service industry. I went on to work as an independent contractor for Takeout Central, a local third party food delivery service. I am currently attending UNC's Coding Bootcamp in the hopes of pursuing a new career in web development and look forward to the challenges ahead.
+                    <p>During the finishing months of my humble degree I was hired on by Holmes Oil Company, where I served for several years as a marketing analyst and pricebbok coordinator. Realizing the convenience store industry was not a good fit for me I decided to pursue a (surprisingly) more lucrative career in the food service industry. I went on to work as an independent contractor for Takeout Central, a local third party food delivery service. I am currently attending UNC's Coding Bootcamp in the hopes of pursuing a new career in web development and look forward to the challenges ahead.
                 <p class="lead">
                 </p>
+                </div>
             </div>
         </div>
     </div>
-
-    <footer class="footer">
-    </footer>
+    <div class="row">
+        <nav class="navbar fixed-bottom navbar-dark bg-dark">
+            <a class="navbar-brand" href="#!"></a>
+        </nav>
+    </div>
 </body>
 </html>
