--- a/contact.html
+++ b/contact.html
@@ -3,54 +3,58 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Basic Portfolio</title>
-    <link rel="stylesheet" type="text/css" href="css/reset.css" />
+    <title>Bootstrap Portfolio</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/style.css"/>
 </head>
 <body class="container">
     <div class="row">
         <div class="col-md-12 col-sm-12 col-xs-12">
-        <nav class="navbar sticky-top navbar-dark bg-primary navbar-toggler-left border border-dark">
-            <div>Colton Johnson</div>
-            <div class="row">
-                <div class="col-xs-4.5"></div>
-                <div class="col-xs-4.5"></div>
-                <div class="col-xs-3">
-                <a class="navbar-brand float-sm-left" href="index.html">About</a>
-                <a class="navbar-brand float-sm-left" href="portfolio.html">Portfolio</a>
-                <a class="navbar-brand float-sm-left" href="contact.html">Contact</a>
+            <nav class="navbar fixed-top navbar-dark bg-white navbar-toggler-left border border-dark text-muted">
+                <div class="h3 p-3 mb-2 bg-info text-white">Colton Johnson</div>
+                <div class="row">
+                    <div class="col-xs-4.5"></div>
+                    <div class="col-xs-4.5"></div>
+                    <div class="col-xs-3">
+                        <a class="navbar-brand float-sm-left text-muted" href="index.html">About</a>
+                        <a class="navbar-brand float-sm-left text-muted" href="portfolio.html">Portfolio</a>
+                        <a class="navbar-brand float-sm-left text-muted" href="contact.html">Contact</a>
+                    </div>
                 </div>
-            </div>
-        </nav>
+            </nav>
         </div>
     </div>
     <br>
-    <div class="jumbotron col-md-12">
-        <div>Contact</div>
+    <br>
+    <br>
+    <br>
+    <div class="jumbotron border border-dark bg-white col-md-12">
+        <div class="h1 text-info">Contact</div>
         <br>
         <div class="row">
-
-                <form>
-                        <div class="form-group col-md-12">
-                          <label for="formGroupExampleInput">Name</label>
-                          <input type="text" class="form-control form-group" id="formGroupExampleInput" placeholder="Example Name">
-                        </div>
-                        <div class="form-group col-md-12">
-                          <label for="formGroupExampleInput2">Email</label>
-                          <input type="text" class="form-control col-md-12" id="formGroupExampleInput2" placeholder="example@gmail.com">
-                        </div>
-                      </form>
-            
-        </div>
-                <br>
-                <p id="formmessage">Message</p>
-                <div id="messagefield">
-                    <textarea rows="11" cols="123"></textarea>
-                    <br>
-                    <br>
-                    <button type="button" class="btn btn-primary row">Submit</button>
+            <form>
+                <div class="form-group col-md-12 h4 text-muted">
+                    <label for="formGroupExampleInput">Name</label>
+                    <input type="text" class="form-control form-group" id="formGroupExampleInput" placeholder="Example Name">
                 </div>
+                <div class="form-group col-md-12 h4 text-muted">
+                    <label for="formGroupExampleInput2 h4">Email</label>
+                    <input type="text" class="form-control col-md-12" id="formGroupExampleInput2" placeholder="example@gmail.com">
+                </div>
+            </form>
+        </div>
+        <form>
+            <div class="form-group h4 text-muted">
+                <label for="exampleFormControlTextarea1">Message</label>
+                <textarea class="form-control" id="exampleFormControlTextarea1" rows="10"></textarea>
+            </div>
         </form>
-
- 
+        <button type="button" class="btn btn-info row mx-auto">Submit</button>
+    </div>
+    <div class="row">
+        <nav class="navbar fixed-bottom navbar-dark bg-dark">
+            <a class="navbar-brand" href="#!"></a>
+        </nav>
+    </div>
+</body>
 </html>
