--- a/portfolio.html
+++ b/portfolio.html
@@ -3,50 +3,92 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Basic Portfolio</title>
-    <link rel="stylesheet" type="text/css" href="css/reset.css" />
+    <title>Bootstrap Portfolio</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/style.css"/>
 </head>
 <body class="container">
     <div class="row">
         <div class="col-md-12 col-sm-12 col-xs-12">
-        <nav class="navbar sticky-top navbar-dark bg-primary navbar-toggler-left border border-dark">
-            <div>Colton Johnson</div>
+        <nav class="navbar fixed-top navbar-dark bg-white navbar-toggler-left border border-dark text-muted">
+            <div class="h3 p-3 mb-2 bg-info text-white">Colton Johnson</div>
             <div class="row">
                 <div class="col-xs-4.5"></div>
                 <div class="col-xs-4.5"></div>
                 <div class="col-xs-3">
-                <a class="navbar-brand float-sm-left" href="index.html">About</a>
-                <a class="navbar-brand float-sm-left" href="portfolio.html">Portfolio</a>
-                <a class="navbar-brand float-sm-left" href="contact.html">Contact</a>
+                    <a class="navbar-brand float-sm-left text-muted" href="index.html">About</a>
+                    <a class="navbar-brand float-sm-left text-muted" href="portfolio.html">Portfolio</a>
+                    <a class="navbar-brand float-sm-left text-muted" href="contact.html">Contact</a>
                 </div>
             </div>
         </nav>
         </div>
     </div>
     <br>
-    <div class="jumbotron">
-            <div class="row">
-                <div class="col-4">
-                        <img src="images/lorem1.jpg" alt="ph1">
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <div class="jumbotron border border-dark bg-white">
+        <div class="row">
+            <div class="col-md-4">
+                <img class="img-fluid card-img" src="images/lorem1.jpg" alt="ph1">
+                <div class="card-img-overlay">
+                    <br>
+                    <br>
+                    <br>
+                    <a class="p-3 mb-2 bg-info text-white card-text d-flex align-items-baseline" href="">Rock Paper Scissors</a>
                 </div>
-                <div class="col-4"><img src="images/lorem2.jpg" alt="ph2"></div>
-                <div class="col-4"><img src="images/lorem3.jpg" alt="ph3"></div>
             </div>
-
-        <div id="ph4">
-            <img src="images/lorem4.jpg" alt="ph4">
+            <div class="col-md-4">
+                <img class= "img-fluid card-img" src="images/lorem2.jpg" alt="ph2">
+                <div class="card-img-overlay">
+                    <br>
+                    <br>
+                    <br>
+                    <a class="p-3 mb-2 bg-info text-white card-text d-flex align-items-baseline" href="">RPG Game</a>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <img class= "img-fluid card-img" src="images/lorem3.jpg" alt="ph3">
+                <div class="card-img-overlay">
+                    <br>
+                    <br>
+                    <br>
+                    <a class="p-3 mb-2 bg-info text-white card-text d-flex align-items-baseline" href="">Rutgers Info Widget</a>
+                </div>
+            </div>
         </div>
-        <div id="ph5">
-            <img src="images/lorem5.jpg" alt="ph5">
-        </div>   
-        <a id="th1" href="">Rock Paper Scissors</a>
-        <a id="th2" href="">RPG Game</a> 
-        <a id="th3" href="">Rutgers Info Widget</a> 
-        <a id="th4" href="">Trivia Game</a>
-        <a id="th5" href="">Hangman</a>
-    </section>
-    <footer class="footer">
-    </footer>
+        <br>
+        <br>
+        <div class="row">
+            <div class="col-md-4">
+                <img class="img-fluid card-img" src="images/lorem4.jpg" alt="ph4">
+                <div class="card-img-overlay">
+                    <br>
+                    <br>
+                    <br>
+                    <a class="p-3 mb-2 bg-info text-white card-text d-flex align-items-baseline text-md-center" href="">Trivia Game</a>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <img class= "img-fluid card-img" src="images/lorem5.jpg" alt="ph5">
+                <div class="card-img-overlay">
+                    <br>
+                    <br>
+                    <br>
+                    <a class="p-3 mb-2 bg-info text-white card-text d-flex align-items-baseline" href="">Hangman</a>
+                </div>
+            </div>
+            <div class="col-md-4 ">
+            </div>
+        </div>
+    </div>      
+    <div class="row">
+        <nav class="navbar fixed-bottom navbar-dark bg-dark">
+            <a class="navbar-brand" href="#!"></a>
+        </nav>
+    </div>
 </body>
 </html>
