--- a/contact.html
+++ b/contact.html
@@ -9,27 +9,23 @@
 </head>
 <body class="container">
     <div class="row">
-        <div class="col-md-12 col-sm-12 col-xs-12">
-            <nav class="navbar fixed-top navbar-dark bg-white navbar-toggler-left border border-dark text-muted">
-                <div class="h3 p-3 mb-2 bg-info text-white">Colton Johnson</div>
-                <div class="row">
-                    <div class="col-xs-4.5"></div>
-                    <div class="col-xs-4.5"></div>
-                    <div class="col-xs-3">
-                        <a class="navbar-brand float-sm-left text-muted" href="index.html">About</a>
-                        <a class="navbar-brand float-sm-left text-muted" href="portfolio.html">Portfolio</a>
-                        <a class="navbar-brand float-sm-left text-muted" href="contact.html">Contact</a>
-                    </div>
-                </div>
-            </nav>
-        </div>
+        <nav class="navbar-fixed justify-content-between fixed-top navbar-dark bg-white navbar-toggler-left border border-dark text-muted" style="height: 10%;">
+        <div class="col-1"></div>
+        <div class="h3 p-3 bg-info text-white text-center align-bottom col-xs-3 mx-auto float-sm-left" style="font-size:2vw; top: 0%; width: 20%; left: 14%; height: 10%; position: fixed;">Colton Johnson</div>
+            <div class="col-5"></div>
+            <div class="col-xm-3 justify-content-between mx-auto" style="position: fixed; right: 14%; top: 2%;">
+                <a class="navbar-brand text-muted justify-content-between" href="index.html">About</a>
+                <a class="navbar-brand text-muted justify-content-between" href="portfolio.html">Portfolio</a>
+                <a class="navbar-brand text-muted justify-content-between" href="contact.html">Contact</a>
+            </div>
+            <div class="col-1"></div>
+        </nav>
     </div>
     <br>
     <br>
-    <br>
-    <br>
-    <div class="jumbotron border border-dark bg-white col-md-12">
+    <div class="jumbotron border border-dark bg-white col-md-12" style= "margin-top: 10%; margin-bottom: 10%;">
         <div class="h1 text-info">Contact</div>
+        <div class="border-top w-100"></div>
         <br>
         <div class="row">
             <form>
@@ -38,7 +34,7 @@
                     <input type="text" class="form-control form-group" id="formGroupExampleInput" placeholder="Example Name">
                 </div>
                 <div class="form-group col-md-12 h4 text-muted">
-                    <label for="formGroupExampleInput2 h4">Email</label>
+                    <label for="formGroupExampleInput2">Email</label>
                     <input type="text" class="form-control col-md-12" id="formGroupExampleInput2" placeholder="example@gmail.com">
                 </div>
             </form>
@@ -52,6 +48,7 @@
         <button type="button" class="btn btn-info row mx-auto">Submit</button>
     </div>
     <div class="row">
+        <a class="fixed-bottom bg-info text-info p-1 mb-1">bar</a>
         <nav class="navbar fixed-bottom navbar-dark bg-dark">
             <a class="navbar-brand" href="#!"></a>
         </nav>
