--- a/index.html
+++ b/index.html
@@ -9,33 +9,28 @@
 </head>
 <body class="container">
     <div class="row">
-        <div class="ol-xs-2">
-        <div class="col-xs-10">
-            <nav class="navbar justify-content-between fixed-top navbar-dark bg-white navbar-toggler-left border border-dark text-muted">
-                <div class="h3 p-3 mb-2 bg-info text-white">Colton Johnson</div>
-                <div class="row">
-                    <div class="col-xs-4.5"></div>
-                    <div class="col-xs-4.5"></div>
-                    <div class="col-xs-3">
-                        <a class="navbar-brand float-sm-left text-muted" href="index.html">About</a>
-                        <a class="navbar-brand float-sm-left text-muted" href="portfolio.html">Portfolio</a>
-                        <a class="navbar-brand float-sm-left text-muted" href="contact.html">Contact</a>
-                    </div>
-                </div>
-            </nav>
-        </div>
+        <nav class="navbar-fixed justify-content-between fixed-top navbar-dark bg-white navbar-toggler-left border border-dark text-muted" style="height: 10%;">
+        <div class="col-1"></div>
+        <div class="h3 p-3 bg-info text-white text-center align-bottom col-xs-3 mx-auto float-sm-left" style="font-size:2vw; top: 0%; width: 20%; left: 14%; height: 10%; position: fixed;">Colton Johnson</div>
+            <div class="col-5"></div>
+            <div class="col-xm-3 justify-content-between mx-auto" style="position: fixed; right: 14%; top: 2%;">
+                <a class="navbar-brand text-muted justify-content-between" href="index.html">About</a>
+                <a class="navbar-brand text-muted justify-content-between" href="portfolio.html">Portfolio</a>
+                <a class="navbar-brand text-muted justify-content-between" href="contact.html">Contact</a>
+            </div>
+            <div class="col-1"></div>
+        </nav>
     </div>
     <br>
     <br>
-    <br>
-    <br>
-    <div class="jumbotron border border-dark bg-white">
+    <div class="jumbotron border border-dark bg-white" style= "margin-top: 10%; margin-bottom: 10%;">
         <div class="row">
             <div class="col-xs-4 col-sm-4 col-md-4">
-                <div class="h1 text-info" >About</div>
+                <div class="h1 text-info">About</div>
             </div>
             <div class="col-xs-4 col-sm-4 col-md-4"></div>
             <div class="col-xs-4 col-sm-4 col-md-4"></div>
+        <div class="border-top w-100"></div>
         <br>
         <div class="row">
             <div class="col-xs-4 col-sm-4 col-md-4">
@@ -43,7 +38,7 @@
             </div>
                 <hr class="my-2">
                 <div class="col-xs-8 col-sm-8 col-md-8">
-                    <p>Hey there! My name is Colton Johnson and I am a Chapel Hill local. After moving as a youth to North Carolina from Peteluma California I have lived here ever since. I am fortunate to have been blessed with wonderful friends and family in the area. 
+                    <p>Hey there! My name is Colton Johnson and I am a Chapel Hill local. After moving as a youth to North Carolina from Petaluma California I have lived here ever since. I am fortunate to have been blessed with wonderful friends and family in the area. 
                     </p>
                     <br>
                     <p>I spent my late teen years in Boone North Carolina, and after attending classes at the local community college I returned to the Chapel Hill area to finish an Associates in Science. At Allamance Community College I focused on chemistry and mathematics.
@@ -57,6 +52,7 @@
         </div>
     </div>
     <div class="row">
+        <a class="fixed-bottom bg-info text-info p-1 mb-1">bar</a>
         <nav class="navbar fixed-bottom navbar-dark bg-dark">
             <a class="navbar-brand" href="#!"></a>
         </nav>
