--- a/portfolio.html
+++ b/portfolio.html
@@ -9,54 +9,40 @@
 </head>
 <body class="container">
     <div class="row">
-        <div class="col-md-12 col-sm-12 col-xs-12">
-        <nav class="navbar fixed-top navbar-dark bg-white navbar-toggler-left border border-dark text-muted">
-            <div class="h3 p-3 mb-2 bg-info text-white">Colton Johnson</div>
-            <div class="row">
-                <div class="col-xs-4.5"></div>
-                <div class="col-xs-4.5"></div>
-                <div class="col-xs-3">
-                    <a class="navbar-brand float-sm-left text-muted" href="index.html">About</a>
-                    <a class="navbar-brand float-sm-left text-muted" href="portfolio.html">Portfolio</a>
-                    <a class="navbar-brand float-sm-left text-muted" href="contact.html">Contact</a>
-                </div>
+        <nav class="navbar-fixed justify-content-between fixed-top navbar-dark bg-white navbar-toggler-left border border-dark text-muted" style="height: 10%;">
+        <div class="col-1"></div>
+        <div class="h3 p-3 bg-info text-white text-center align-bottom col-xs-3 mx-auto float-sm-left" style="font-size:2vw; top: 0%; width: 20%; left: 14%; height: 10%; position: fixed;">Colton Johnson</div>
+            <div class="col-5"></div>
+            <div class="col-xm-3 justify-content-between mx-auto" style="position: fixed; right: 14%; top: 2%;">
+                <a class="navbar-brand text-muted justify-content-between" href="index.html">About</a>
+                <a class="navbar-brand text-muted justify-content-between" href="portfolio.html">Portfolio</a>
+                <a class="navbar-brand text-muted justify-content-between" href="contact.html">Contact</a>
             </div>
+            <div class="col-1"></div>
         </nav>
-        </div>
     </div>
     <br>
     <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <div class="jumbotron border border-dark bg-white">
+    <div class="jumbotron border border-dark bg-white clearfix" style= "margin-top: 10%; margin-bottom: 10%;">
         <div class="row">
             <div class="col-md-4">
                 <img class="img-fluid card-img" src="images/lorem1.jpg" alt="ph1">
                 <div class="card-img-overlay">
-                    <br>
-                    <br>
-                    <br>
-                    <a class="p-3 mb-2 bg-info text-white card-text d-flex align-items-baseline" href="">Rock Paper Scissors</a>
+                    <a class="p-3 mb-2 bg-info text-white card-text d-flex justify-content-center" href="">Rock Paper Scissors</a>
                 </div>
             </div>
+            <br>
             <div class="col-md-4">
                 <img class= "img-fluid card-img" src="images/lorem2.jpg" alt="ph2">
                 <div class="card-img-overlay">
-                    <br>
-                    <br>
-                    <br>
-                    <a class="p-3 mb-2 bg-info text-white card-text d-flex align-items-baseline" href="">RPG Game</a>
+                    <a class="p-3 mb-2 bg-info text-white card-text d-flex justify-content-center" href="">RPG Game</a>
                 </div>
             </div>
+            <br>
             <div class="col-md-4">
                 <img class= "img-fluid card-img" src="images/lorem3.jpg" alt="ph3">
                 <div class="card-img-overlay">
-                    <br>
-                    <br>
-                    <br>
-                    <a class="p-3 mb-2 bg-info text-white card-text d-flex align-items-baseline" href="">Rutgers Info Widget</a>
+                    <a class="p-3 mb-2 bg-info text-white card-text d-flex justify-content-center" href="">Rutgers Info Widget</a>
                 </div>
             </div>
         </div>
@@ -66,19 +52,14 @@
             <div class="col-md-4">
                 <img class="img-fluid card-img" src="images/lorem4.jpg" alt="ph4">
                 <div class="card-img-overlay">
-                    <br>
-                    <br>
-                    <br>
-                    <a class="p-3 mb-2 bg-info text-white card-text d-flex align-items-baseline text-md-center" href="">Trivia Game</a>
+                    <a class="p-3 mb-2 bg-info text-white card-text d-flex justify-content-center" href="">Trivia Game</a>
                 </div>
             </div>
+            <br>
             <div class="col-md-4">
                 <img class= "img-fluid card-img" src="images/lorem5.jpg" alt="ph5">
                 <div class="card-img-overlay">
-                    <br>
-                    <br>
-                    <br>
-                    <a class="p-3 mb-2 bg-info text-white card-text d-flex align-items-baseline" href="">Hangman</a>
+                    <a class="p-3 mb-2 bg-info text-white card-text d-flex justify-content-center" href="">Hangman</a>
                 </div>
             </div>
             <div class="col-md-4 ">
@@ -86,6 +67,7 @@
         </div>
     </div>      
     <div class="row">
+        <a class="fixed-bottom bg-info text-info p-1 mb-1">bar</a>
         <nav class="navbar fixed-bottom navbar-dark bg-dark">
             <a class="navbar-brand" href="#!"></a>
         </nav>
