--- a/portfolio.html
+++ b/portfolio.html
@@ -26,23 +26,29 @@
     <div class="jumbotron border border-dark bg-white clearfix" style= "margin-top: 10%; margin-bottom: 10%;">
         <div class="row">
             <div class="col-md-4">
-                <img class="img-fluid card-img" src="images/lorem1.jpg" alt="ph1">
-                <div class="card-img-overlay">
-                    <a class="p-3 mb-2 bg-info text-white card-text d-flex justify-content-center" href="">Rock Paper Scissors</a>
+                <div class="card" style="width: auto;">
+                    <img class="img-fluid card-img" src="images/lorem1.jpg" alt="ph1">
+                    <div class="card-img-overlay card-body" >
+                        <a class="p-1 mb-2 bg-info text-white card-text d-flex justify-content-center mx-auto" href="">Rock Paper Scissors</a>
+                    </div>
                 </div>
             </div>
             <br>
             <div class="col-md-4">
-                <img class= "img-fluid card-img" src="images/lorem2.jpg" alt="ph2">
-                <div class="card-img-overlay">
-                    <a class="p-3 mb-2 bg-info text-white card-text d-flex justify-content-center" href="">RPG Game</a>
+                <div class="card" style="width: auto;">
+                    <img class= "img-fluid card-img" src="images/lorem2.jpg" alt="ph2">
+                    <div class="card-img-overlay card-body">
+                        <a class="p-1 mb-2 bg-info text-white card-text d-flex justify-content-center" href="">RPG Game</a>
+                    </div>
                 </div>
             </div>
             <br>
             <div class="col-md-4">
-                <img class= "img-fluid card-img" src="images/lorem3.jpg" alt="ph3">
-                <div class="card-img-overlay">
-                    <a class="p-3 mb-2 bg-info text-white card-text d-flex justify-content-center" href="">Rutgers Info Widget</a>
+                <div class="card" style="width: auto;">
+                    <img class= "img-fluid card-img" src="images/lorem3.jpg" alt="ph3">
+                    <div class="card-img-overlay card-body">
+                        <a class="p-1 mb-2 bg-info text-white card-text d-flex justify-content-center" href="">Rutgers Info Widget</a>
+                    </div>
                 </div>
             </div>
         </div>
@@ -50,16 +56,20 @@
         <br>
         <div class="row">
             <div class="col-md-4">
-                <img class="img-fluid card-img" src="images/lorem4.jpg" alt="ph4">
-                <div class="card-img-overlay">
-                    <a class="p-3 mb-2 bg-info text-white card-text d-flex justify-content-center" href="">Trivia Game</a>
+                <div class="card" style="width: auto;">
+                    <img class="img-fluid card-img" src="images/lorem4.jpg" alt="ph4">
+                    <div class="card-img-overlay card-body">
+                        <a class="p-1 mb-2 bg-info text-white card-text d-flex justify-content-center" href="">Trivia Game</a>
+                    </div>
                 </div>
             </div>
             <br>
             <div class="col-md-4">
-                <img class= "img-fluid card-img" src="images/lorem5.jpg" alt="ph5">
-                <div class="card-img-overlay">
-                    <a class="p-3 mb-2 bg-info text-white card-text d-flex justify-content-center" href="">Hangman</a>
+                <div class="card" style="width: auto;">
+                    <img class= "img-fluid card-img" src="images/lorem5.jpg" alt="ph5">
+                    <div class="card-img-overlay card-body ">
+                        <a class="p-1 mb-2 bg-info text-white card-text d-flex justify-content-center" href="">Hangman</a>
+                    </div>
                 </div>
             </div>
             <div class="col-md-4 ">
