--- a/portfolio.html
+++ b/portfolio.html
@@ -28,8 +28,8 @@
             <div class="col-md-4">
                 <div class="card" style="width: auto;">
                     <img class="img-fluid card-img" src="images/lorem1.jpg" alt="ph1">
-                    <div class="card-img-overlay card-body" >
-                        <a class="p-1 mb-2 bg-info text-white card-text d-flex justify-content-center mx-auto" href="">Rock Paper Scissors</a>
+                    <div class="card-img-overlay h-100 d-flex flex-column justify-content-end card-body">
+                        <a class="p-1 mb-2 bg-info text-white card-text d-flex justify-content-center" href="">Rock Paper Scissors</a>
                     </div>
                 </div>
             </div>
@@ -37,7 +37,7 @@
             <div class="col-md-4">
                 <div class="card" style="width: auto;">
                     <img class= "img-fluid card-img" src="images/lorem2.jpg" alt="ph2">
-                    <div class="card-img-overlay card-body">
+                    <div class="card-img-overlay  h-100 d-flex flex-column justify-content-end card-body">
                         <a class="p-1 mb-2 bg-info text-white card-text d-flex justify-content-center" href="">RPG Game</a>
                     </div>
                 </div>
@@ -46,8 +46,8 @@
             <div class="col-md-4">
                 <div class="card" style="width: auto;">
                     <img class= "img-fluid card-img" src="images/lorem3.jpg" alt="ph3">
-                    <div class="card-img-overlay card-body">
-                        <a class="p-1 mb-2 bg-info text-white card-text d-flex justify-content-center" href="">Rutgers Info Widget</a>
+                    <div class="card-img-overlay  h-100 d-flex flex-column justify-content-end card-body">
+                        <a class="p-1 mb-2 bg-info text-white card-text d-flex justify-content-center" style="line-height: 1; text-align: center;" href="">Rutgers Info Widget</a>
                     </div>
                 </div>
             </div>
@@ -58,7 +58,7 @@
             <div class="col-md-4">
                 <div class="card" style="width: auto;">
                     <img class="img-fluid card-img" src="images/lorem4.jpg" alt="ph4">
-                    <div class="card-img-overlay card-body">
+                    <div class="card-img-overlay  h-100 d-flex flex-column justify-content-end card-body">
                         <a class="p-1 mb-2 bg-info text-white card-text d-flex justify-content-center" href="">Trivia Game</a>
                     </div>
                 </div>
@@ -67,7 +67,7 @@
             <div class="col-md-4">
                 <div class="card" style="width: auto;">
                     <img class= "img-fluid card-img" src="images/lorem5.jpg" alt="ph5">
-                    <div class="card-img-overlay card-body ">
+                    <div class="card-img-overlay  h-100 d-flex flex-column justify-content-end card-body ">
                         <a class="p-1 mb-2 bg-info text-white card-text d-flex justify-content-center" href="">Hangman</a>
                     </div>
                 </div>
