--- a/portfolio.html
+++ b/portfolio.html
@@ -29,7 +29,7 @@
                 <div class="card" style="width: auto;">
                     <img class="img-fluid card-img" src="images/lorem1.jpg" alt="ph1">
                     <div class="card-img-overlay h-100 d-flex flex-column justify-content-end card-body">
-                        <a class="p-1 mb-2 bg-info text-white card-text d-flex justify-content-center" href="">Rock Paper Scissors</a>
+                        <a class="p-1 mb-2 bg-info text-white card-text d-flex justify-content-center" style="line-height: 1;" href="">Rock Paper Scissors</a>
                     </div>
                 </div>
             </div>
@@ -38,7 +38,7 @@
                 <div class="card" style="width: auto;">
                     <img class= "img-fluid card-img" src="images/lorem2.jpg" alt="ph2">
                     <div class="card-img-overlay  h-100 d-flex flex-column justify-content-end card-body">
-                        <a class="p-1 mb-2 bg-info text-white card-text d-flex justify-content-center" href="">RPG Game</a>
+                        <a class="p-1 mb-2 bg-info text-white card-text d-flex justify-content-center" style="line-height: 1;" href="">RPG Game</a>
                     </div>
                 </div>
             </div>
@@ -59,7 +59,7 @@
                 <div class="card" style="width: auto;">
                     <img class="img-fluid card-img" src="images/lorem4.jpg" alt="ph4">
                     <div class="card-img-overlay  h-100 d-flex flex-column justify-content-end card-body">
-                        <a class="p-1 mb-2 bg-info text-white card-text d-flex justify-content-center" href="">Trivia Game</a>
+                        <a class="p-1 mb-2 bg-info text-white card-text d-flex justify-content-center" style="line-height: 1;" href="">Trivia Game</a>
                     </div>
                 </div>
             </div>
@@ -68,7 +68,7 @@
                 <div class="card" style="width: auto;">
                     <img class= "img-fluid card-img" src="images/lorem5.jpg" alt="ph5">
                     <div class="card-img-overlay  h-100 d-flex flex-column justify-content-end card-body ">
-                        <a class="p-1 mb-2 bg-info text-white card-text d-flex justify-content-center" href="">Hangman</a>
+                        <a class="p-1 mb-2 bg-info text-white card-text d-flex justify-content-center" style="line-height: 1;" href="">Hangman</a>
                     </div>
                 </div>
             </div>
